# ARIMA

./: CMakeLists.txt  Makefile  README.md  TODO.md  config.txt
data/: arima_output.csv
doc/: how_to_get_started.md
include/: ACF.h  ADF.h  ARIMA.h  PACF.h  utils.h
src/: ACF.cpp  ADF.cpp  ARIMA.cpp  PACF.cpp  main.cpp  py_implementation.py  utils.cpp  verify_pq.py
test/: test.py
